--- a/Style/styles.css
+++ b/Style/styles.css
@@ -24,15 +24,26 @@
     font-size: 1.2rem;
     font-weight: 400;
 }
-.special{
+.section_title{
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.special_text{
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-align: center;
-    font-size: 5.93rem;
-    font-weight: 800;
+    font-size: 483rempx;
+    font-weight: 700;
 }
+.description{
+    color: #534C64;
+    font-size: 1.125rem;
+    font-weight: 400;
+    padding: 24px 0px;
+}
+
 
 
 
@@ -84,6 +95,15 @@ header{
     font-size: 3rem;
     font-weight: 600;
 }
+.banner_title span{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    font-size: 5.93rem;
+    font-weight: 800;
+}
 .banner_text{
     margin: 15px 0px;
 }
@@ -92,4 +112,31 @@ header{
     font-size: 20px;
     font-weight: 500;
     padding: 10px;
+}
+
+
+/* Online Games */
+.online_games{
+    padding: 120px 240px;
+}
+
+.online_games h3{
+    text-align: center;
+}
+.online_games p{
+    text-align: center;
+    margin-bottom: 48px;
+}
+.games_container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+.game_image img{
+    /* width: 100%; */
+}
+.game_details{
+    color: #534C64;
+    font-size: 1.25rem;
+    font-weight: 500;
+    padding: 25px 0px;
 }
