--- a/Style/styles.css
+++ b/Style/styles.css
@@ -118,7 +118,7 @@ header{
 }
 
 
-/* Online Games */
+/* Online Games section Styles*/
 .online_games{
     padding: 120px 240px;
 }
@@ -142,4 +142,71 @@ header{
     font-size: 1.25rem;
     font-weight: 500;
     padding: 25px 0px;
+}
+
+
+
+/* play instantly Section Styles */
+.play_instant{
+
+    padding: 120px 240px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 120px;
+}
+.play_instant_content{
+    text-align: right;
+}
+.play_instant_image{
+    position: relative;
+    left: 145px;
+}
+.ovarlap_image {
+    position: relative;
+    bottom: 265px;
+    right: 120px;
+}
+
+.hide{
+    display: none;
+}
+
+
+
+/* Game Category Section */
+.games_category{
+    padding: 120px 200px;
+    margin: auto;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.games_category_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+    flex-wrap: wrap;
+}
+.game_type{
+    /* width: 248px;
+    height: 80px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFF;
+    transition: 0.6s ease;
+    border-radius: 50px;
+
+}
+.game_type:hover{
+    background: #FFF;
+    border:2px solid #F948B2;
+    transition: 0.6s ease;
+}
+
+.game_type img{
+    padding: 10px 0px 10px 10px;
+}
+.game_type_name{
+    padding: 28px 20px;
 }
